kajit/tests/snapshots/corpus__generated_postreg_disasm_json_deep_struct_aarch64.snap
---
source: kajit/tests/corpus.rs
expression: disasm
---
> sub sp, sp, #0xd0
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x400
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xb0]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x3bc
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x3a4
  ldrb w9, [x19]
  mov x11, x9
  cmp x11, x24
  b.ne $+0x18
  add x19, x19, #0x1
  mov x11, x23
  mov x11, x23
  ldr x24, [sp, #0xb0]
  b $+0x340
  mov x12, x23
  add x9, sp, #0x50
  mov x11, x9
  add x9, sp, #0x58
  mov x12, x9
  mov x9, #<imm>
  mov x24, x9
  str x24, [sp, #0x80]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  mov x25, x13
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x88]
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0x90]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x98]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xa0]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xa8]
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  mov x2, x12
  add x3, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x2d0
  ldr x11, [sp, #0x80]
  cmp x11, x24
  cset x24, ne
  ldr x9, [sp, #0x50]
  mov x26, x9
  ldr x9, [sp, #0x58]
  mov x23, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x28c
  mov x11, x25
  ldr x13, [sp, #0x88]
  mov x0, x26
  mov x1, x23
  mov x2, x11
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x25, x0
  ldr x11, [sp, #0x90]
  ldr x13, [sp, #0x98]
  mov x0, x26
  mov x1, x23
  mov x2, x11
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x26, x0
  cbz x25, $+0xc
  cbz x24, $+0x8
  b $+0x20
  ldr x23, [sp, #0xb8]
  mov x25, x23
  ldr x12, [sp, #0x80]
  mov x11, x12
  mov x11, x12
  ldr x12, [sp, #0xa0]
  b $+0x3c
  ldr x23, [sp, #0xb8]
  str x19, [x22]
  mov x0, x21
  mov x1, x22
  bl $+0x214
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x1ec
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x25, x12
  cmp x11, x12
  cset x12, ne
  cbz x26, $+0xc
  cbz x12, $+0x8
  b $+0x14
  mov x24, x25
  mov x23, x11
  mov x23, x11
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x8
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x188
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x23, x9
  mov x24, x25
  orr x24, x24, x15
  cbnz x23, $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x144
  mov x23, x24
  mov x23, x24
  b $+0x8
  mov x23, x24
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x10c
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xf4
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xdc
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x12, [sp, #0xa8]
  cmp x11, x12
  cset x12, ne
  cbnz x12, $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x12, x23
  b $+0x60
  mov x9, #<imm>
  mov x12, x9
  mov x10, #<imm>
  cmp x11, x10
  b.ne $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x12, x23
  b $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x5c
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x23, x12
  cbnz x11, $+0x88c
  mov x11, x23
  mov x23, x11
  and x23, x23, x24
  cmp x23, x24
  b.ne $+0x8
  b $+0x10
  mov w9, #0xa
  str w9, [x22, #0x10]
  b $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xd0
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xd0
  ret
